add pinocchio iframe and mastrogpt functions

--- a/web/index.html
+++ b/web/index.html
@@ -1,1 +1,40 @@
-Welcome
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Pinocchio - Nuvolaris</title>
+    <style>
+        iframe {
+            position: absolute;
+            inset: 0;
+            border: none;
+            width: 100%;
+            height: 100%;
+        }
+    </style>
+
+    <script>
+        window.onload = () => {
+            const iframe = document.querySelector('iframe');
+            setTimeout(() => {
+                iframe.contentWindow.postMessage({
+                    type: 'metadata',
+                    data: {
+                        namespace: 'testuser'
+                    }
+                }, 'http://pinocchio.localhost');
+            }, 500);
+
+
+        };
+    </script>
+
+</head>
+
+<body>
+    <iframe src="http://pinocchio.localhost"></iframe>
+</body>
+
+</html>
